--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,12 @@ uuid = "65b38e5c-fa97-498f-814c-2dc0ae7de8a9"
 authors = ["James Gardner <james.gardner1421@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+
 [compat]
 julia = "1"
+CairoMakie = "0.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
