--- a/Project.toml
+++ b/Project.toml
@@ -9,9 +9,9 @@ ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 
 [compat]
-CairoMakie = "0.7"
-Colors = "0.12"
+CairoMakie = "0.7, 0.8"
 ColorSchemes = "3"
+Colors = "0.12"
 julia = "1"
 
 [extras]
